--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Textbased Interactive Experience</title>
+    
+    <link rel="stylesheet" href="/style.css">
+    <script defer src="/main.js"></script>
+
 </head>
 <body>
-    
+    <div class="container">
+        <p id="text">Historia</p>
+        <form action="#">
+            <input type="text" id="input-options">
+        </form>
+    </div>
 </body>
 </html>
