--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <h1>Grott dykaren</h1>
     <div class="container">
         <p id="text">Historia</p>
         <form action="#">
