--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 <body>
     <h1>Grott dykaren</h1>
     <div class="container">
-        <p id="text">Historia</p>
+        <p id="text">Du och din kompis har dykt i flera dagar i Egyptens grottor för att hitta en stor kista med guld. <br>
+            Du simmar in i ett litet hål för att se om skatten finns där. När du kommer ut efter att inte hittat något märker du att din kompis är borta. 
+            <br>
+            Du ser hans dykartub och bestämmer dig för att hitta din kompis. 
+            Vill ta med dig dykartuben 
+            eller lämna kvar den? <br> <br>
+            Skriv "ta dykartub" eller "lämna" 
+            </p>
         <form action="#">
             <input type="text" id="input-options">
+            <button type="submit">Fortsätt</button>
         </form>
     </div>
 </body>
