Starting with JS

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             Skriv "ta dykartub" eller "lämna" 
             </p>
         <form action="#">
-            <input type="text" id="input-options">
-            <button type="submit">Fortsätt</button>
+            <input type="text" id="input-options" required>
+            <button type="submit" id="button">Fortsätt</button>
         </form>
     </div>
 </body>
