nya tag imorgon

--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Textbased Interactive Experience</title>
-    
-    <link rel="stylesheet" href="/style.css">
-    <script defer src="/main.js"></script>
 
-</head>
-<body>
+    <link rel="stylesheet" href="/style.css" />
+    <script defer src="/main.js"></script>
+  </head>
+  <body>
     <h1>Grott dykaren</h1>
     <div class="container">
-        <p id="text">Du och din kompis har dykt i flera dagar i Egyptens grottor för att hitta en stor kista med guld. <br>
-            Du simmar in i ett litet hål för att se om skatten finns där. När du kommer ut efter att inte hittat något märker du att din kompis är borta. 
-            <br>
-            Du ser hans dykartub och bestämmer dig för att hitta din kompis. 
-            Vill ta med dig dykartuben 
-            eller lämna kvar den? <br> <br>
-            Skriv "ta dykartub" eller "lämna" 
-            </p>
-        <form action="#">
-            <input type="text" id="input-options" required>
-            <button type="submit" id="button">Fortsätt</button>
-        </form>
+      <p id="text">
+        Du och din kompis har dykt i flera dagar i Egyptens grottor för att
+        hitta en stor kista med guld. <br />
+        Du simmar in i ett litet hål för att se om skatten finns där. När du
+        kommer ut efter att inte hittat något märker du att din kompis är borta.
+        <br />
+        Du ser hans dykartub och bestämmer dig för att hitta din kompis. Vill ta
+        med dig dykartuben eller lämna kvar den? <br />
+        <br />
+        Skriv "ta dykartub" eller "lämna"
+      </p>
+      <form action="#">
+        <input type="text" id="input-options" required />
+        <button type="submit" id="button">Fortsätt</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
