changed from text input to buttons.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <h1>Grott dykaren</h1>
     <div class="container">
+
       <p id="text">
         Du och din kompis har dykt i flera dagar i Egyptens grottor för att
         hitta en stor kista med guld. <br />
@@ -20,13 +21,14 @@
         <br />
         Du ser hans dykartub och bestämmer dig för att hitta din kompis. Vill ta
         med dig dykartuben eller lämna kvar den? <br />
-        <br />
-        Skriv "ta dykartub" eller "lämna"
       </p>
-      <form action="#">
-        <input type="text" id="input-options" required />
-        <button type="submit" id="button">Fortsätt</button>
-      </form>
+
+      <div class="btn-grid" id="option-buttons">
+        <button class="option-btn">Ta dykartuben</button>
+        <button class="option-btn">Lämna dykartuben</button>
+        <button class="option-btn">extra val</button>
+      </div>
+
     </div>
   </body>
 </html>
