--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
       </p>
 
       <div class="btn-grid" id="option-buttons">
-        <button class="option-btn">Ta dykartuben</button>
-        <button class="option-btn">Lämna dykartuben</button>
-        <button class="option-btn">extra val</button>
+        <button id="option-btn-1"></button>
+        <button id="option-btn-2"></button>
       </div>
 
     </div>
