Scene 2 with extra buttons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </p>
 
       <div class="btn-grid" id="option-buttons">
-        <button id="option-btn-1"></button>
-        <button id="option-btn-2"></button>
+        <button class="btn" id="option-btn-1"></button>
+        <button class="btn" id="option-btn-2"></button>
       </div>
 
     </div>
