scene 2 done and splited js files for each scene.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Textbased Interactive Experience</title>
 
     <link rel="stylesheet" href="/style.css" />
-    <script defer src="/main.js"></script>
+    <script src="mainStartScene.js"></script>
+    <script src="scene2.js"></script>
   </head>
   <body>
     <h1>Grott dykaren</h1>
     <div class="container">
-
       <p id="text">
         Du och din kompis har dykt i flera dagar i Egyptens grottor för att
         hitta en stor kista med guld. <br />
@@ -27,7 +27,6 @@
         <button class="btn" id="option-btn-1"></button>
         <button class="btn" id="option-btn-2"></button>
       </div>
-
     </div>
   </body>
 </html>
