--- a/index.html
+++ b/index.html
@@ -9,23 +9,17 @@
     <link rel="stylesheet" href="/style.css" />
     <script src="mainStartScene.js"></script>
     <script src="scene2.js"></script>
+    <script src="scene3.js"></script>
   </head>
   <body>
     <h1>Grott dykaren</h1>
     <div class="container">
-      <p id="text">
-        Du och din kompis har dykt i flera dagar i Egyptens grottor för att
-        hitta en stor kista med guld. <br />
-        Du simmar in i ett litet hål för att se om skatten finns där. När du
-        kommer ut efter att inte hittat något märker du att din kompis är borta.
-        <br />
-        Du ser hans dykartub och bestämmer dig för att hitta din kompis. Vill ta
-        med dig dykartuben eller lämna kvar den? <br />
-      </p>
+      <p id="text"></p>
 
       <div class="btn-grid" id="option-buttons">
         <button class="btn" id="option-btn-1"></button>
         <button class="btn" id="option-btn-2"></button>
+        <button class="btn" id="option-btn-3"></button>
       </div>
     </div>
   </body>
