scene4 soon done and linked to html.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="mainStartScene.js"></script>
     <script src="scene2.js"></script>
     <script src="scene3.js"></script>
+    <script src="scene4.js"></script>
   </head>
   <body>
     <h1>Grott dykaren</h1>
