End scene with new background Image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Textbased Interactive Experience</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="mainStartScene.js"></script>
     <script src="scene2.js"></script>
     <script src="scene3.js"></script>
