--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="scene2.js"></script>
     <script src="scene3.js"></script>
     <script src="scene4.js"></script>
+    <script src="slutScene.js"></script>
   </head>
   <body>
     <h1>Grott dykaren</h1>
